--- a/work.html
+++ b/work.html
@@ -152,6 +152,7 @@
   <ul style="list-style-type: none; padding: 0;">
     <li><a href="02.html" style="color:#000000;">[ untitled 01/20/2026 ]</a></li>
     <li><a href="01.html" style="color:#000000;">[ untitled 01/19/2026 ]</a></li>
+    <li><a href="dancetrax.html" style="color:#000000;">[ dancetrax mix 12/06/2025 ]</a></li>
     <li><a href="mix04.html" style="color:#000000;">[ 1 hour visual/audio mixtape 03/30/2025 ]</a></li>
     <li><a href="beats.html" style="color:#000000;">[ sp404sx live set 02/17/2025 ]</a></li>
     <li><a href="03.html" style="color:#000000;">[ sunnnnnnn MIKE remix album 01/05/2025 ]</a></li>
@@ -179,6 +180,7 @@
     
     updateClock();
 </script>
+
 
 
 </body></html>
