--- a/01.html
+++ b/01.html
@@ -142,7 +142,8 @@
   <div class="content">
     <img src="rolls royce 26-Recovered.png" alt="Gash YT Poster" class="yt-image">
     <img src="oneeeee.png" alt="Gash YT Flyer" class="yt-image second-image">
-    <div class="image-caption">8.5 x 11 ink on paper, digitally altered scans</div>
+    <div class="image-caption">8.5 x 11 ink on paper, digitally altered</div>
   </div>
+
 
 </body></html>
