--- a/dancetrax.html
+++ b/dancetrax.html
@@ -142,10 +142,11 @@
   <div class="content">
     <img src="club.png" alt="Gash YT Poster" class="yt-image">
     <img src="colorful.png" alt="Gash YT Flyer" class="yt-image second-image">
-    <div class="image-caption">favorite obscure dance tracks. arranged in ableton live 11. runtime 27:42
+    <div class="image-caption">favorite obscure dance tracks by various artists. mix arranged in ableton live 11. runtime 27:42
       <h1><a href="https://www.youtube.com/watch?v=JTNpt3OyAls" target="_blank" rel="noopener noreferrer">youtube link</a></h1>
 
     </div>
   </div>
+
 
 </body></html>
