--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
   <img src="cat.gif" alt="Decorative gif" class="decorative-gif">
 
   <ul style="list-style-type: none; padding: 0;">
-    <li><a href="webmusic.html" style="color:#000000;">[ web music 01/24/2026 ]</a></li>
+    <li><a href="webmusic.html" style="color:#000000;">[ web music graphic 01/24/2026 ]</a></li>
     <li><a href="02.html" style="color:#000000;">[ untitled 01/20/2026 ]</a></li>
     <li><a href="01.html" style="color:#000000;">[ untitled 01/19/2026 ]</a></li>
     <li><a href="dancetrax.html" style="color:#000000;">[ dancetrax mix 12/06/2025 ]</a></li>
@@ -144,6 +144,7 @@
 
 
   </ul>
+
 
 
 
