--- a/webmusic.html
+++ b/webmusic.html
@@ -141,7 +141,8 @@
   
   <div class="content">
     <img src="picture2.png" alt="Gash YT Poster" class="yt-image">
-    <div class="image-caption">deskjet + drawing on paper, digitally altered </div>
+    <div class="image-caption">deskjet + drawing on paper</div>
   </div>
+
 
 </body></html>
