--- a/work.html
+++ b/work.html
@@ -130,8 +130,8 @@
   <img src="cat.gif" alt="Decorative gif" class="decorative-gif">
 
   <ul style="list-style-type: none; padding: 0;">
-    <li><a href="06.html" style="color:#000000;">[ untitled 01/24/2026 ]</a></li>
-    <li><a href="webmusic.html" style="color:#000000;">[ web music graphic 01/23/2026 ]</a></li>
+    <li><a href="webmusic.html" style="color:#000000;">[ web music 01/27/2026 ]</a></li>
+    <li><a href="graphic.html" style="color:#000000;">[ t-shirt graphic 01/23/2026 ]</a></li>
     <li><a href="02.html" style="color:#000000;">[ untitled 01/20/2026 ]</a></li>
     <li><a href="01.html" style="color:#000000;">[ untitled 01/19/2026 ]</a></li>
     <li><a href="dancetrax.html" style="color:#000000;">[ dancetrax mix 12/06/2025 ]</a></li>
@@ -145,6 +145,7 @@
 
 
   </ul>
+
 
 
 
