--- a/webmusic.html
+++ b/webmusic.html
@@ -61,6 +61,7 @@
 
     .second-image {
       margin-top: 5px;
+      max-width: 50%
     }
 
     /* mobile Styles */
@@ -140,9 +141,14 @@
   </a>
   
   <div class="content">
-    <img src="picture2.png" alt="Gash YT Poster" class="yt-image">
-    <div class="image-caption">deskjet + drawing on paper</div>
-  </div>
+    <img src="title2.png" alt="Gash YT Poster" class="yt-image">
+    <img src="COVERCROPPED.png" alt="Gash YT Poster" class="yt-image">
+    <img src="finalgif.gif" alt="Gash YT Flyer" class="yt-image second-image">
+    <div class="image-caption">extended play, produced in fl studio 25. runtime 12:42
+      <div class="image-caption">+ additional work
+      <h1><a href="https://www.youtube.com/watch?v=yLRt1p8g0Hg" target="_blank" rel="noopener noreferrer">youtube link</a></h1>
 
+    </div>
+  </div>
 
 </body></html>
