--- a/work.html
+++ b/work.html
@@ -127,6 +127,7 @@
   <img src="cat.gif" alt="Decorative gif" class="decorative-gif">
 
   <ul style="list-style-type: none; padding: 0;">
+    <li><a href="10.html" style="color:#000000;">[ untitled drawings 02/27/2026 ]</a></li>
     <li><a href="wm.html" style="color:#000000;">[ web music 01/27/2026 ]</a></li>
     <li><a href="graphic.html" style="color:#000000;">[ t-shirt graphic 01/23/2026 ]</a></li>
     <li><a href="02.html" style="color:#000000;">[ untitled 01/20/2026 ]</a></li>
@@ -148,3 +149,4 @@
 
 
 </body></html>
+
