--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
       <li><a href="info.html">info*</a></li>
       <li><a href="work.html">personal work*</a></li>
       <li><a href="journal.html">journal*</a></li>
-      <li><a href="inspo.html">inspo*</a></li>
+      <li><a href="inspo.html">inspiration*</a></li>
+      <li><a href="scans.html">scans*</a></li>
   </ul>
 
   <div class="clock" id="clock">1/21/2026 6:40:29 PM</div>
@@ -259,3 +260,4 @@
 </body>
 
 </html>
+
