--- a/scans.html
+++ b/scans.html
@@ -124,7 +124,7 @@
     <img src="menu2.gif" alt="DESCRIPTION">
   </a>
   
-  <img src="plantgif.gif" alt="Decorative gif" class="decorative-gif">
+  <img src="folder3.gif" alt="Decorative gif" class="decorative-gif">
 
   <ul style="list-style-type: none; padding: 0;">
     <li><a href="vinyl.html" style="color:#000000;">[ vinyl ]</a></li>
@@ -138,6 +138,7 @@
   </ul>
 
  
+
 
 
 
