--- a/vinyl.html
+++ b/vinyl.html
@@ -141,7 +141,7 @@
   
   <div class="content">
 
-<div class="image-caption">[ collectibles only ]</div>
+<div class="image-caption">(only includes my collectibles)</div>
 
     <img src="awakeningdesu.png" alt="Gash YT Poster" class="yt-image">
     <img src="alfredo.png" alt="Gash YT Poster" class="yt-image">
@@ -160,5 +160,6 @@
     <div class="image-caption">wip</div>
     
   </div>
+
 
 </body></html>
